changed icon, fix redraw when table hidden, fix 1 pixel scrollbar.

--- a/core/src/main/web/app/app.scss
+++ b/core/src/main/web/app/app.scss
@@ -293,3 +293,12 @@ tree-node {
 	left: -1px;
 	position: relative;
 }
+
+.bko-menu {
+  background-image: url(../images/menu@2x.png);
+  background-size: 3px;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 20px;
+  padding: 0 10px;
+}
